[gd_scene load_steps=7 format=3 uid="uid://bt5uyv0x16wwx"]

[ext_resource type="Script" uid="uid://bc03usmchwe6r" path="res://Building/station_marker.gd" id="1_6u3ll"]
[ext_resource type="Texture2D" uid="uid://bgq0to4a4vpe7" path="res://UI/StationMarker.png" id="1_n77ld"]
[ext_resource type="Shader" uid="uid://c1b2dxbded03x" path="res://UI/station_marker.gdshader" id="2_kytpu"]
[ext_resource type="FontFile" uid="uid://dyvu7ridfyt4k" path="res://Fonts/AcPlus_IBM_BIOS.ttf" id="3_g7ivs"]
[ext_resource type="Texture2D" uid="uid://d1vrabx1brv1t" path="res://UI/SpriteMarkerMask.png" id="3_ul5tr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ul5tr"]
resource_local_to_scene = true
shader = ExtResource("2_kytpu")
shader_parameter/mask_texture = ExtResource("3_ul5tr")
shader_parameter/progress = 0.51
shader_parameter/wheel_color = Color(0.894118, 0.231373, 0.266667, 1)

[node name="StationMarker" type="Node2D"]
z_index = 10
script = ExtResource("1_6u3ll")

[node name="MarkerSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ul5tr")
texture = ExtResource("1_n77ld")

[node name="ProductionIcon" type="Sprite2D" parent="MarkerSprite"]
position = Vector2(0, -1)

[node name="Label" type="Label" parent="MarkerSprite"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.0
offset_top = -12.0
offset_right = -11.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_g7ivs")
theme_override_font_sizes/font_size = 8
text = "16"
horizontal_alignment = 1
vertical_alignment = 2
